# grep

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: GnuTests.yml  ci.yml  code-quality.yml  fuzzing.yml
benches/: grep_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_grep.rs
fuzz/uufuzz/: Cargo.toml
src/: context_buffer.rs  lib.rs  line_buffer.rs  main.rs  matcher.rs  output.rs  searcher.rs
tests/: test_grep.rs
