[package]
name = "uu_grep"
description = "A Rust implementation of GNU Grep"
repository = "https://github.com/microsoft/uutils-grep"
edition = "2024"
rust-version = "1.88.0"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/microsoft/uutils-grep"
keywords = ["grep", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[[bin]]
name = "grep"
path = "src/main.rs"

[lib]
name = "uu_grep"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["wrap_help", "cargo", "color"] }
glob = "0.3.1"
memchr = "2.7.2"
onig = { version = "~6.5.1", default-features = false }
onig_sys = { version = "*", default-features = false }
uucore = "0.8.0"
walkdir = "2.5"

[dev-dependencies]
uutests = "0.8.0"
